PL/Projecto/tests/good/12.nx
type r = 1..10;

foreach i in r do
  print(i);
