PL/Projecto/tests/bad/10.nx
var r : int = 2;

foreach i in r do print(i);
